# planb-tether-mdk-mining-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  database.py  main.py  models.py  run_all.py
app/ai/: __init__.py  agent.py  llm_client.py  tools.py
app/api/: dependencies.py  main.py  schemas.py
app/api/routes/: control.py  health.py  kpi.py  telemetry.py
app/control/: decision_engine.py
app/dashboard/: app.py  dashboard.py
app/data/: asic_specs.py  generator.py
app/models/: anomaly_detector.py  failure_classifier.py  health_score.py  isolation_forest.py  train_models.py
app/pipeline/: features.py  ingestion.py  kpi.py
app/rl/: mining_env.py  train_agent.py
app/routers/: items.py
docs/: DEPLOYMENT.md  TROUBLESHOOTING.md  architecture.mmd  technical_report.md  technical_report.tex  technical_report_condensed.md  video_script.md
tests/: test_api.py  test_config.py  test_decision_engine.py  test_features.py  test_generator.py  test_kpi.py  test_models.py  test_safety.py
