[project]
name = "fastapi-app"
version = "0.1.0"
description = "Enterprise FastAPI application"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.113.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
