[project]
name = "mdk-mining-ai"
version = "0.1.0"
description = "AI-Driven Mining Optimization & Predictive Maintenance — Tether MDK Assignment"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "torch>=2.3.0",
    "pytorch-lightning>=2.3.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=1.0.0",
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
    "streamlit>=1.37.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
